# minecraft_oci_instance

./: .gitignore  .pre-commit-config.yaml  .tflint.hcl  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
packer/: build.pkr.hcl  locals.pkr.hcl  minecraft.pkrvars.hcl  plugins.pkr.hcl  pyproject.toml  source.pkr.hcl  variables.pkr.hcl
packer/files/: add_temp_ansible.sh  minecraft_install.yml  remove_temp_ansible.sh  requirements.yml  server.properties
tofu/: backend.tf  locals.tf  main.tf  outputs.tf  secrets.tfvars.example  terraform.tfvars  variables.tf  versions.tf
tofu/modules/compute/: cloud-init.yaml.tpl  main.tf  outputs.tf  variables.tf
tofu/modules/storage/: main.tf  outputs.tf  variables.tf
tofu/tests/: compute_test.tftest.hcl  storage_test.tftest.hcl  variables_test.tftest.hcl
